# DataBox

./: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  uno.config.ts  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
